text size and line height set for every size & first draft of mobile complete

--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -49,7 +49,7 @@
                     be smarter than this’”</h2>
                 <h3 class="main__info-quote-person">- Xavier de Rosnay</h3>
                 <h2 class="main__info-bio-title">Xavier de Rosnay & Gaspard Augé</h2>
-                <p class="main__info-bio-one">Xavier De Ronsay and Gaspard Augé had a few
+                <p class="main__info-bio-one main__para-size">Xavier De Ronsay and Gaspard Augé had a few
                     mutual friends, who happened to run a record label,
                     seeking tracks for a compilation. With an immediate
                     connection, the pair decided to try their hand at
@@ -60,7 +60,7 @@
                     director of the newly founded Ed Banger Records,
                     who boasted Daft Punk as former clients. One week
                     later, they were in his office, signing a record deal.</p>
-                <p class="main__info-bio-two"> Xavier De Ronsay and Gaspard Augé had a few
+                <p class="main__info-bio-two main__para-size"> Xavier De Ronsay and Gaspard Augé had a few
                     mutual friends, who happened to run a record label,
                     seeking tracks for a compilation. With an immediate
                     connection, the pair decided to try their hand at
@@ -94,13 +94,13 @@
                 <li class="main__footer-link-icons"><a>Twitter</a></li>
             </ul> 
             <div class="main__footer-info-holder">
-                <p class="main__footer-info-one">Richard Rovner<br>The Bees Knees Management</p>
+                <p class="main__footer-info-one main__footer-contact-names">Richard Rovner<br>The Bees Knees Management</p>
                 <p class="main__footer-info-two">460 King Street West<br>Toronto, Ontario M5V 1L7</p>
                 <p class="main__footer-info-three">info@thebeesknees.com</p>
-                <p class="main__footer-info-four">Marsha Vlasic<br>Artist Group International</p>
+                <p class="main__footer-info-four main__footer-contact-names">Marsha Vlasic<br>Artist Group International</p>
                 <p class="main__footer-info-five">Booking Agent for<br>US / South America / Japan</p>
                 <p class="main__footer-info-six">marsha.vlasic@artistgrp.com</p>
-                <p class="main__footer-info-seven">Russell Warby<br>William Morrir Entertainment</p>
+                <p class="main__footer-info-seven main__footer-contact-names">Russell Warby<br>William Morrir Entertainment</p>
                 <p class="main__footer-info-eight">Booking Agent for<br>UK / EU / AU</p>
                 <p class="main__footer-info-nine">RLW@wmeentertainment.com</p>
                 <p class="main__footer-info-ten">Copyright The Bees Knees 2018<br>All Rights Reserved</p>
