final version of bandsite-sprint 1

--- a/sprint-1/index.html
+++ b/sprint-1/index.html
@@ -35,17 +35,14 @@
                     <p class="main__nav-bar-list-item">Shows</p>
                 </div>
             </div>
-            <!-- <ul class="main__nav-bar-list">
-                <li class="main__nav-bar-list-item"><a class="main__bio-border">Biography</a></li>
-                <li class="main__nav-bar-list-item"><a>Shows</a></li>
-            </ul> -->
+          
             <div class="main__hero">
                 <h1 class="main__hero-title">Gaspard Auge &<br>Xavier de Rosnay</h1>
             </div>
         </nav>
 
         <div class="main__wrap">
-            <section class="main__info">
+            <section>
                 <h1 class="main__info-title">About The Musicians</h1>
                 <img class="main__bio-image" src="./assets/Images/about-the-musicians.jpg" alt="a photo of the two musicians">
                 <h2 class="main__info-quote">“We are more comfortable with not
@@ -66,7 +63,7 @@
                         director of the newly founded Ed Banger Records,
                         who boasted Daft Punk as former clients. One week
                         later, they were in his office, signing a record deal.</p>
-                    <p class="main__info-bio-two main__para-size"> Xavier De Ronsay and Gaspard Augé had a few
+                    <p class="main__para-size"> Xavier De Ronsay and Gaspard Augé had a few
                         mutual friends, who happened to run a record label,
                         seeking tracks for a compilation. With an immediate
                         connection, the pair decided to try their hand at
@@ -93,41 +90,40 @@
                 <img class="main__gallery-image" src="./assets/Images/Photo-gallery-9.jpg" alt="confetti falling on a concert ground">
             </section>
         </div>
+
         <footer class="main__footer">
             <div class="main__footer-first-section">
-                    <h1 class="main__footer-header">Get In Touch</h1>
-                    <svg class="main__footer-icon-padding" width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
-                            <title>Icon-Instagram</title>
-                            <desc>Created with Sketch.</desc>
-                            <g id="BandSite" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                <g id="Icon/Instagram" fill="#FFFFFF" fill-rule="nonzero">
-                                    <path d="M15,0 C17.7569111,0 20,2.24308892 20,5 L20,15 C20,17.7569111 17.7569111,20 15,20 L5,20 C2.24308892,20 0,17.7569111 0,15 L0,5 C0,2.24308892 2.24308892,0 5,0 L15,0 Z M18.4615385,15 L18.4615385,5 C18.4615385,3.09119592 16.9088041,1.53846154 15,1.53846154 L5,1.53846154 C3.09119592,1.53846154 1.53846154,3.09119592 1.53846154,5 L1.53846154,15 C1.53846154,16.9088041 3.09119592,18.4615385 5,18.4615385 L15,18.4615385 C16.9088041,18.4615385 18.4615385,16.9088041 18.4615385,15 Z M9.99981109,4.56692913 C12.9958302,4.56692913 15.4330709,7.00408514 15.4330709,10 C15.4330709,12.9959149 12.9958302,15.4330709 9.99981109,15.4330709 C7.00416981,15.4330709 4.56692913,12.9959149 4.56692913,10 C4.56692913,7.00408507 7.00416988,4.56692913 9.99981109,4.56692913 Z M9.99981109,13.8856223 C12.1423614,13.8856223 13.8855685,12.1424758 13.8855685,10 C13.8855685,7.85752416 12.1423614,6.11437772 9.99981109,6.11437772 C7.85726075,6.11437772 6.11443153,7.85752416 6.11443153,10 C6.11443153,12.1424758 7.85726075,13.8856223 9.99981109,13.8856223 Z M15.4330709,2.36220472 C15.8671413,2.36220472 16.2204724,2.71553583 16.2204724,3.1496063 C16.2204724,3.58367677 15.8671413,3.93700787 15.4330709,3.93700787 C14.9990004,3.93700787 14.6456693,3.58367677 14.6456693,3.1496063 C14.6456693,2.71553583 14.9990004,2.36220472 15.4330709,2.36220472 Z" id="Combined-Shape"></path>
-                                </g>
-                            </g>
-                        </svg>
-                        <svg class="main__footer-icon-padding" width="12px" height="20px" viewBox="0 0 12 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
-                            <title>Icon-Facebook</title>
-                            <desc>Created with Sketch.</desc>
-                            <g id="BandSite" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                <g id="Icon/Facebook" fill="#FFFFFF">
-                                    <path d="M9.99196483,2.86268774 L11.6001667,2.86268774 L11.6001667,0.00360752208 L8.31894343,0.00360752208 C8.31894343,0.00360752208 4.62941896,-0.243536863 3.68344495,3.35338292 C3.68344495,3.35338292 3.34080887,4.29669843 3.38786086,6.62101929 L1.97175609e-13,6.63107276 L1.97175609e-13,9.67167169 L3.38786086,9.66144709 L3.38786086,19.9390514 L7.70642202,19.9390514 L7.70642202,9.67167169 L11.1314985,9.67167169 L11.1314985,6.62101929 L7.70642202,6.62101929 L7.70642202,4.96412089 C7.70642202,3.88981073 8.2886315,2.86268774 9.99196483,2.86268774 Z" id="Path"></path>
-                                </g>
-                            </g>
-                        </svg>
-                        <svg class="main__footer-icon-padding" width="25px" height="20px" viewBox="0 0 25 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
-                            <title>Icon-Twitter</title>
-                            <desc>Created with Sketch.</desc>
-                            <g id="BandSite" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                <g id="Icon/Twitter" fill="#FFFFFF">
-                                    <path d="M24.8934106,2.42838542 C24.7684921,2.28841142 24.563007,2.25056967 24.3961776,2.33439125 C24.2000512,2.43286133 23.7667016,2.5720215 23.2926619,2.69287108 C23.7732121,2.1402995 24.1748234,1.47176108 24.3351424,0.881347667 C24.3811222,0.712890667 24.3168318,0.533854167 24.1748234,0.43294275 C24.0320011,0.3312175 23.8419783,0.32999675 23.6983423,0.428059917 C23.3777043,0.646972667 21.8697291,1.28743492 20.9354842,1.47298183 C19.7741886,0.455729167 18.6230656,0 17.2286157,0 C16.1959009,0 15.2368351,0.284016917 14.1194849,0.920817083 C12.1277043,2.056071 11.8261906,4.55322267 11.9979029,6.0176595 C6.49090414,5.55867517 3.40537355,2.4898275 2.31487897,1.16048175 C2.22902289,1.05631508 2.0975938,0.997721333 1.96331647,1.0095215 C1.82863222,1.01888025 1.70656189,1.09293617 1.63657497,1.20849608 C0.909849719,2.40356442 0.709654385,3.74430342 1.0575548,5.08504233 C1.2756538,5.92569992 1.6845893,6.66625975 2.14398055,7.24446617 C1.81032172,7.06990558 1.48195255,6.84814458 1.2011908,6.62475592 C1.07627222,6.52506517 0.904559969,6.5071615 0.760923802,6.57592775 C0.616880802,6.64550783 0.525328135,6.79117842 0.525328135,6.9510905 C0.525328135,9.37622075 2.15984964,11.0306803 3.56935464,11.8481445 C3.25807555,11.7940267 2.93540305,11.7069498 2.63755147,11.6182454 C2.48048764,11.5714518 2.31040305,11.6210938 2.20338805,11.7447917 C2.09596614,11.8684896 2.07155214,12.0438639 2.14031839,12.1927897 C3.00335547,14.054362 4.74814697,15.4248047 6.67929947,15.8369955 C5.01100522,16.8786622 2.64446872,17.3986817 0.463072219,17.1512858 C0.268573552,17.1313477 0.0797714686,17.2501627 0.0195500519,17.4397787 C-0.0406713648,17.6293946 0.0419296352,17.8352865 0.216490135,17.9309082 C2.75595972,19.3233236 5.39308514,20 8.27923422,20 C8.2849308,20 8.29144122,20 8.2975448,20 C12.3628931,19.9963379 16.1458521,18.2584635 18.9489934,15.107015 C21.4909042,12.2497559 22.8145533,8.62833658 22.5215846,5.36783858 C23.2084336,4.88240567 24.2781764,3.94368492 24.9328801,2.93334967 C25.0354191,2.775472 25.0191431,2.56876625 24.8934106,2.42838542 Z" id="Path"></path>
-                                </g>
-                            </g>
-                        </svg>
-                
-
+                <h1 class="main__footer-header">Get In Touch</h1>
+                <svg class="main__footer-icon-padding" width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
+                    <title>Icon-Instagram</title>
+                    <desc>Created with Sketch.</desc>
+                    <g id="BandSite" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <g id="Icon/Instagram" fill="#FFFFFF" fill-rule="nonzero">
+                            <path d="M15,0 C17.7569111,0 20,2.24308892 20,5 L20,15 C20,17.7569111 17.7569111,20 15,20 L5,20 C2.24308892,20 0,17.7569111 0,15 L0,5 C0,2.24308892 2.24308892,0 5,0 L15,0 Z M18.4615385,15 L18.4615385,5 C18.4615385,3.09119592 16.9088041,1.53846154 15,1.53846154 L5,1.53846154 C3.09119592,1.53846154 1.53846154,3.09119592 1.53846154,5 L1.53846154,15 C1.53846154,16.9088041 3.09119592,18.4615385 5,18.4615385 L15,18.4615385 C16.9088041,18.4615385 18.4615385,16.9088041 18.4615385,15 Z M9.99981109,4.56692913 C12.9958302,4.56692913 15.4330709,7.00408514 15.4330709,10 C15.4330709,12.9959149 12.9958302,15.4330709 9.99981109,15.4330709 C7.00416981,15.4330709 4.56692913,12.9959149 4.56692913,10 C4.56692913,7.00408507 7.00416988,4.56692913 9.99981109,4.56692913 Z M9.99981109,13.8856223 C12.1423614,13.8856223 13.8855685,12.1424758 13.8855685,10 C13.8855685,7.85752416 12.1423614,6.11437772 9.99981109,6.11437772 C7.85726075,6.11437772 6.11443153,7.85752416 6.11443153,10 C6.11443153,12.1424758 7.85726075,13.8856223 9.99981109,13.8856223 Z M15.4330709,2.36220472 C15.8671413,2.36220472 16.2204724,2.71553583 16.2204724,3.1496063 C16.2204724,3.58367677 15.8671413,3.93700787 15.4330709,3.93700787 C14.9990004,3.93700787 14.6456693,3.58367677 14.6456693,3.1496063 C14.6456693,2.71553583 14.9990004,2.36220472 15.4330709,2.36220472 Z" id="Combined-Shape"></path>
+                        </g>
+                    </g>
+                </svg>
+                <svg class="main__footer-icon-padding" width="12px" height="20px" viewBox="0 0 12 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
+                    <title>Icon-Facebook</title>
+                    <desc>Created with Sketch.</desc>
+                    <g id="BandSite" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <g id="Icon/Facebook" fill="#FFFFFF">
+                            <path d="M9.99196483,2.86268774 L11.6001667,2.86268774 L11.6001667,0.00360752208 L8.31894343,0.00360752208 C8.31894343,0.00360752208 4.62941896,-0.243536863 3.68344495,3.35338292 C3.68344495,3.35338292 3.34080887,4.29669843 3.38786086,6.62101929 L1.97175609e-13,6.63107276 L1.97175609e-13,9.67167169 L3.38786086,9.66144709 L3.38786086,19.9390514 L7.70642202,19.9390514 L7.70642202,9.67167169 L11.1314985,9.67167169 L11.1314985,6.62101929 L7.70642202,6.62101929 L7.70642202,4.96412089 C7.70642202,3.88981073 8.2886315,2.86268774 9.99196483,2.86268774 Z" id="Path"></path>
+                        </g>
+                    </g>
+                </svg>
+                <svg class="main__footer-icon-padding" width="25px" height="20px" viewBox="0 0 25 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <!-- Generator: Sketch 52.5 (67469) - http://www.bohemiancoding.com/sketch -->
+                    <title>Icon-Twitter</title>
+                    <desc>Created with Sketch.</desc>
+                    <g id="BandSite" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <g id="Icon/Twitter" fill="#FFFFFF">
+                            <path d="M24.8934106,2.42838542 C24.7684921,2.28841142 24.563007,2.25056967 24.3961776,2.33439125 C24.2000512,2.43286133 23.7667016,2.5720215 23.2926619,2.69287108 C23.7732121,2.1402995 24.1748234,1.47176108 24.3351424,0.881347667 C24.3811222,0.712890667 24.3168318,0.533854167 24.1748234,0.43294275 C24.0320011,0.3312175 23.8419783,0.32999675 23.6983423,0.428059917 C23.3777043,0.646972667 21.8697291,1.28743492 20.9354842,1.47298183 C19.7741886,0.455729167 18.6230656,0 17.2286157,0 C16.1959009,0 15.2368351,0.284016917 14.1194849,0.920817083 C12.1277043,2.056071 11.8261906,4.55322267 11.9979029,6.0176595 C6.49090414,5.55867517 3.40537355,2.4898275 2.31487897,1.16048175 C2.22902289,1.05631508 2.0975938,0.997721333 1.96331647,1.0095215 C1.82863222,1.01888025 1.70656189,1.09293617 1.63657497,1.20849608 C0.909849719,2.40356442 0.709654385,3.74430342 1.0575548,5.08504233 C1.2756538,5.92569992 1.6845893,6.66625975 2.14398055,7.24446617 C1.81032172,7.06990558 1.48195255,6.84814458 1.2011908,6.62475592 C1.07627222,6.52506517 0.904559969,6.5071615 0.760923802,6.57592775 C0.616880802,6.64550783 0.525328135,6.79117842 0.525328135,6.9510905 C0.525328135,9.37622075 2.15984964,11.0306803 3.56935464,11.8481445 C3.25807555,11.7940267 2.93540305,11.7069498 2.63755147,11.6182454 C2.48048764,11.5714518 2.31040305,11.6210938 2.20338805,11.7447917 C2.09596614,11.8684896 2.07155214,12.0438639 2.14031839,12.1927897 C3.00335547,14.054362 4.74814697,15.4248047 6.67929947,15.8369955 C5.01100522,16.8786622 2.64446872,17.3986817 0.463072219,17.1512858 C0.268573552,17.1313477 0.0797714686,17.2501627 0.0195500519,17.4397787 C-0.0406713648,17.6293946 0.0419296352,17.8352865 0.216490135,17.9309082 C2.75595972,19.3233236 5.39308514,20 8.27923422,20 C8.2849308,20 8.29144122,20 8.2975448,20 C12.3628931,19.9963379 16.1458521,18.2584635 18.9489934,15.107015 C21.4909042,12.2497559 22.8145533,8.62833658 22.5215846,5.36783858 C23.2084336,4.88240567 24.2781764,3.94368492 24.9328801,2.93334967 C25.0354191,2.775472 25.0191431,2.56876625 24.8934106,2.42838542 Z" id="Path"></path>
+                        </g>
+                    </g>
+                </svg>
                 <svg class="main__footer-logo" width="114px" height="19px" viewBox="0 0 114 19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <!-- Generator: Sketch 52.6 (67491) - http://www.bohemiancoding.com/sketch -->
                     <title>BANDSITE</title>
@@ -147,23 +143,22 @@
             <div class="main__footer-info-holder">
                 <div class="main__footer-second-section">
                     <div>
-                        <p class="main__footer-info-one main__footer-contact-names">Richard Rovner<br>The Bees Knees Management</p>
-                        <p class="main__footer-info-two">460 King Street West<br>Toronto, Ontario M5V 1L7</p>
-                        <p class="main__footer-info-three">info@thebeesknees.com</p>
+                        <p class="main__footer-contact-names">Richard Rovner<br>The Bees Knees Management</p>
+                        <p>460 King Street West<br>Toronto, Ontario M5V 1L7</p>
+                        <p>info@thebeesknees.com</p>
                     </div>
                     <div>
-                        <p class="main__footer-info-four main__footer-contact-names">Marsha Vlasic<br>Artist Group International</p>
-                        <p class="main__footer-info-five">Booking Agent for<br>US / South America / Japan</p>
-                        <p class="main__footer-info-six">marsha.vlasic@artistgrp.com</p>
+                        <p class="main__footer-contact-names">Marsha Vlasic<br>Artist Group International</p>
+                        <p>Booking Agent for<br>US / South America / Japan</p>
+                        <p>marsha.vlasic@artistgrp.com</p>
                     </div>
                     <div>
-                        <p class="main__footer-info-seven main__footer-contact-names">Russell Warby<br>William Morrir Entertainment</p>
-                        <p class="main__footer-info-eight">Booking Agent for<br>UK / EU / AU</p>
-                        <p class="main__footer-info-nine">RLW@wmeentertainment.com</p>
+                        <p class="main__footer-contact-names">Russell Warby<br>William Morrir Entertainment</p>
+                        <p>Booking Agent for<br>UK / EU / AU</p>
+                        <p>RLW@wmeentertainment.com</p>
                     </div>
                 </div>
-                <p class="main__footer-info-ten">Copyright The Bees Knees 2018<br>All Rights Reserved</p>
-                <!-- <p class="main__footer-info-eleven">All Rights Reserved</p> -->
+                        <p>Copyright The Bees Knees 2018<br>All Rights Reserved</p>
             </div>
         </footer>
     </div>
