new section added to html file, small changes in css, and addition of JS file

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bandsite</title>
     <link rel="stylesheet" type="text/css" href="./styles/main.css" />
+    <script type="text/javascript" src="./script.js"></script>
 </head>
 <body>
     <div class="main">
@@ -91,6 +92,21 @@
             </section>
         </div>
 
+        <section>
+            <h1 class="main__comment-title">Join the Conversation</h1>
+            <form>
+                <p></p>
+                <p></p>
+                <button></button>
+            </form>
+            <section>
+                <div>
+                    <p></p>
+                    <p></p>
+                </div>
+            </section>
+        </section>
+
         <footer class="main__footer">
             <div class="main__footer-first-section">
                 <h1 class="main__footer-header">Get In Touch</h1>
@@ -158,7 +174,7 @@
                         <p>RLW@wmeentertainment.com</p>
                     </div>
                 </div>
-                        <p>Copyright The Bees Knees 2018<br>All Rights Reserved</p>
+                        <p>Copyright The Bees Knees &copy; 2018<br>All Rights Reserved</p>
             </div>
         </footer>
     </div>
