created elements using JS and worked on mobile version of shows page

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bandsite</title>
+    <title>Bandsite-Bio</title>
     <link rel="stylesheet" type="text/css" href="./styles/main.css" />
 </head>
 <body>
@@ -19,7 +19,7 @@
             
                 <div class="main__nav-bar-list">
                     <p class="main__nav-bar-list-item main__bio-border">Biography</p>
-                    <p class="main__nav-bar-list-item">Shows</p>
+                    <p class="main__nav-bar-list-item main__nav-bar-item-opacity">Shows</p>
                 </div>
             </div>
           
