--- a/sprint-2/second-page/shows.html
+++ b/sprint-2/second-page/shows.html
@@ -13,7 +13,7 @@
         <nav class="main__nav-bar">
             <div class="main__logo-list-container">
                 <div class="main__header-org">
-                    <a class="main__logo-link" href="index.html">
+                    <a class="main__logo-link" href="../index.html">
                         <img class="main__logo" src="../assets/Logo/Logo-bandsite.svg" alt="logo bandsite">
                     </a>
                 </div>
@@ -24,9 +24,10 @@
                 </div>
             </div>
           
-            <div class="main__hero">
-                <h3 class="main__hero-desc">Woman Worldwide Album</h3>
-                <h1 class="main__hero-title">Waters of<br>Nazareth x We<br>Are your Friends<br>x Phantom</h1>
+            <div class="main__hero-shows">
+                <h3 class="main__hero-desc main__h-three-font">Woman Worldwide Album</h3>
+                <h1 class="main__hero-title-shows">Waters of<br>Nazareth x We<br>Are your Friends<br>x Phantom</h1>
+                <iframe class="main__music" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/448937793&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
             </div>
         </nav>
 
@@ -34,63 +35,63 @@
             <h1 class="main__shows-title">Shows</h1>
             
             <div class="main__show">
-                <h4 class="main__date-title">DATE</h4>
+                <h3 class="main__date-title main__h-three-font">DATE</h3>
                 <h2 class="main__date">Mon Dec 17 2018</h2>
-                <h4 class="main__venue-title">VENUE</h4>
-                <p class="main__venue">Ronald Lane</p>
-                <h4 class="main__location-title">LOCATION</h4>
-                <p class="main__location">San Francisco, CA</p>
-                <button class="main__tickets">BUY TICKETS</button>
+                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
+                <p class="main__venue main__p-font">Ronald Lane</p>
+                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
+                <p class="main__location main__p-font">San Francisco, CA</p>
+                <button class="main__tickets main__p-font">BUY TICKETS</button>
             </div>
 
             <div class="main__show">
-                <h4 class="main__date-title">DATE</h4>
+                <h3 class="main__date-title main__h-three-font">DATE</h3>
                 <h2 class="main__date">Tue Jul 18 2019</h2>
-                <h4 class="main__venue-title">VENUE</h4>
-                <p class="main__venue">Pier 3 East</p>
-                <h4 class="main__location-title">LOCATION</h4>
-                <p class="main__location">San Francisco, CA</p>
-                <button class="main__tickets">BUY TICKETS</button>
+                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
+                <p class="main__venue main__p-font">Pier 3 East</p>
+                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
+                <p class="main__location main__p-font">San Francisco, CA</p>
+                <button class="main__tickets main__p-font">BUY TICKETS</button>
             </div>
 
             <div class="main__show">
-                <h4 class="main__date-title">DATE</h4>
+                <h3 class="main__date-title main__h-three-font">DATE</h3>
                 <h2 class="main__date">Fri Jul 22 2019</h2>
-                <h4 class="main__venue-title">VENUE</h4>
-                <p class="main__venue">View Lounge</p>
-                <h4 class="main__location-title">LOCATION</h4>
-                <p class="main__location">San Francisco, CA</p>
-                <button class="main__tickets">BUY TICKETS</button>
+                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
+                <p class="main__venue main__p-font">View Lounge</p>
+                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
+                <p class="main__location main__p-font">San Francisco, CA</p>
+                <button class="main__tickets main__p-font">BUY TICKETS</button>
             </div>
 
             <div class="main__show">
-                <h4 class="main__date-title">DATE</h4>
+                <h3 class="main__date-title main__h-three-font">DATE</h3>
                 <h2 class="main__date">Sat Aug 12 2019</h2>
-                <h4 class="main__venue-title">VENUE</h4>
-                <p class="main__venue">Hyatt Agency</p>
-                <h4 class="main__location-title">LOCATION</h4>
-                <p class="main__location">San Francisco, CA</p>
-                <button class="main__tickets">BUY TICKETS</button>
+                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
+                <p class="main__venue main__p-font">Hyatt Agency</p>
+                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
+                <p class="main__location main__p-font">San Francisco, CA</p>
+                <button class="main__tickets main__p-font">BUY TICKETS</button>
             </div>
 
             <div class="main__show">
-                <h4 class="main__date-title">DATE</h4>
+                <h3 class="main__date-title main__h-three-font">DATE</h3>
                 <h2 class="main__date">Fri Sep 05 2019</h2>
-                <h4 class="main__venue-title">VENUE</h4>
-                <p class="main__venue">Moscow Center</p>
-                <h4 class="main__location-title">LOCATION</h4>
-                <p class="main__location">San Francisco, CA</p>
-                <button class="main__tickets">BUY TICKETS</button>
+                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
+                <p class="main__venue main__p-font">Moscow Center</p>
+                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
+                <p class="main__location main__p-font">San Francisco, CA</p>
+                <button class="main__tickets main__p-font">BUY TICKETS</button>
             </div>
 
             <div class="main__show">
-                <h4 class="main__date-title">DATE</h4>
+                <h3 class="main__date-title main__h-three-font">DATE</h3>
                 <h2 class="main__date">Wed Aug 11 2019</h2>
-                <h4 class="main__venue-title">VENUE</h4>
-                <p class="main__venue">Pres Club</p>
-                <h4 class="main__location-title">LOCATION</h4>
-                <p class="main__location">San Francisco, CA</p>
-                <button class="main__tickets">BUY TICKETS</button>
+                <h3 class="main__venue-title main__h-three-font">VENUE</h3>
+                <p class="main__venue main__p-font">Pres Club</p>
+                <h3 class="main__location-title main__h-three-font">LOCATION</h3>
+                <p class="main__location main__p-font">San Francisco, CA</p>
+                <button class="main__tickets main__p-font">BUY TICKETS</button>
             </div>
         </div>
 
