shows tablet and desktop mostly done, some styling left

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -19,7 +19,9 @@
             
                 <div class="main__nav-bar-list">
                     <p class="main__nav-bar-list-item main__bio-border">Biography</p>
-                    <p class="main__nav-bar-list-item main__nav-bar-item-opacity">Shows</p>
+                    <a href="./second-page/shows.html">
+                        <p class="main__nav-bar-list-item main__nav-bar-item-opacity">Shows</p>
+                    </a>
                 </div>
             </div>
           
