continued work on script.js

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -88,7 +88,8 @@
                     <label class="main__form-name-label" for="name">NAME</label>
                     <input class="main__form-name" type="text" placeholder="Enter your name" name="name" />
                     <label class="main__form-comment-label" for="comment">COMMENT</label>
-                    <input class="main__form-comment" type="text" placeholder="Add a new comment" name="comment" />
+                    <!-- instead of an input for comment, maybe create a textarea -->
+                    <textarea class="main__form-comment" type="text" placeholder="Add a new comment" name="comment"></textarea>
                     <button class="main__form-button" type="submit">COMMENT</button>
                 </div>
             </form>
