styled form and comment sections in the biography page

--- a/sprint-2/index.html
+++ b/sprint-2/index.html
@@ -95,19 +95,8 @@
             </form>
         </section>
 
-<!-- The comments section (until the footer) will be recreated using JS -->
         <section class="main__new-comments">
-            <!-- <div class="main__comment-container">
-                <img class="main__form-image" src="./assets/Images/Mohan-muruge.jpg" alt="commentator image">
-                <div class="main__comment">
-                    <div class="main__comment-one-container">
-                        <p class="main__comment-name">Michael Lyons</p>
-                        <p class="main__comment-date">12/18/2018</p>
-                    </div>
-                    <p class="main__comment-comment">They BLEW the ROOF off at their last show, once everyone started figuring out they were going. This is still simply the greatest opening of a concert I have EVER witnessed.</p>
-                </div>
-            </div>
-
+            <!-- The comments section (until the footer) will be recreated using JS -->
             <div class="main__comment-container">
                 <img class="main__form-image" src="./assets/Images/Mohan-muruge.jpg" alt="commentator image">
                 <div class="main__comment">
@@ -128,7 +117,19 @@
                     </div>
                     <p class="main__comment-comment">They BLEW the ROOF off at their last show, once everyone started figuring out they were going. This is still simply the greatest opening of a concert I have EVER witnessed.</p>
                 </div>
-            </div>                 -->
+            </div>
+
+            <div class="main__comment-container">
+                <img class="main__form-image" src="./assets/Images/Mohan-muruge.jpg" alt="commentator image">
+                <div class="main__comment">
+                    <div class="main__comment-one-container">
+                        <p class="main__comment-name">Michael Lyons</p>
+                        <p class="main__comment-date">12/18/2018</p>
+                    </div>
+                    <p class="main__comment-comment">They BLEW the ROOF off at their last show, once everyone started figuring out they were going. This is still simply the greatest opening of a concert I have EVER witnessed.</p>
+                </div>
+            </div>                
+            <!-- comment out until here -->
         </section>
 
         <footer class="main__footer">
